--- a/Documents/report/ref.bib
+++ b/Documents/report/ref.bib
@@ -50,11 +50,13 @@
 	file = {Le - A Tutorial on Deep Learning Part 2 Autoencoders, .pdf:/Users/t/Zotero/storage/395HSEH4/Le - A Tutorial on Deep Learning Part 2 Autoencoders, .pdf:application/pdf}
 }
 
-@misc{karpathy_unreasonable_nodate,
+@misc{karpathy_unreasonable_2015,
 	title = {The {Unreasonable} {Effectiveness} of {Recurrent} {Neural} {Networks}},
 	url = {https://karpathy.github.io/2015/05/21/rnn-effectiveness/},
 	urldate = {2018-12-27},
 	author = {Karpathy, Andrej},
+	month = may,
+	year = {2015},
 	file = {The Unreasonable Effectiveness of Recurrent Neural Networks:/Users/t/Zotero/storage/KWU3I4E9/rnn-effectiveness.html:text/html}
 }
 
@@ -238,14 +240,14 @@
 	file = {NIPS Full Text PDF:/Users/t/Zotero/storage/9ETMQCSM/Bengio et al. - 2001 - A Neural Probabilistic Language Model.pdf:application/pdf;NIPS Snapshot:/Users/t/Zotero/storage/V5JI3LYU/1839-a-neural-probabilistic-language-model.html:text/html}
 }
 
-@misc{dyer_conditional_2019,
+@misc{dyer_conditional_2017,
 	address = {University of Oxford},
 	title = {Conditional {Language} {Modelling}},
 	url = {https://github.com/oxford-cs-deepnlp-2017/lectures},
 	urldate = {2019-01-10},
 	author = {Dyer, Chris},
 	month = jan,
-	year = {2019},
+	year = {2017},
 	note = {original-date: 2017-02-06T11:32:46Z}
 }
 
@@ -370,4 +372,31 @@
 	year = {2018},
 	pages = {89--98},
 	file = {Full Text PDF:/Users/t/Zotero/storage/RBDBGDN7/Fikri et al. - 2018 - Stylistically User-Specific Generation.pdf:application/pdf}
+}
+
+@article{serban_hierarchical_2016,
+	title = {A {Hierarchical} {Latent} {Variable} {Encoder}-{Decoder} {Model} for {Generating} {Dialogues}},
+	url = {http://arxiv.org/abs/1605.06069},
+	abstract = {Sequential data often possesses a hierarchical structure with complex dependencies between subsequences, such as found between the utterances in a dialogue. In an effort to model this kind of generative process, we propose a neural network-based generative architecture, with latent stochastic variables that span a variable number of time steps. We apply the proposed model to the task of dialogue response generation and compare it with recent neural network architectures. We evaluate the model performance through automatic evaluation metrics and by carrying out a human evaluation. The experiments demonstrate that our model improves upon recently proposed models and that the latent variables facilitate the generation of long outputs and maintain the context.},
+	urldate = {2019-01-14},
+	journal = {arXiv:1605.06069 [cs]},
+	author = {Serban, Iulian Vlad and Sordoni, Alessandro and Lowe, Ryan and Charlin, Laurent and Pineau, Joelle and Courville, Aaron and Bengio, Yoshua},
+	month = may,
+	year = {2016},
+	note = {arXiv: 1605.06069},
+	keywords = {Computer Science - Artificial Intelligence, Computer Science - Computation and Language, Computer Science - Machine Learning, Computer Science - Neural and Evolutionary Computing, I.2.7, I.5.1},
+	file = {arXiv\:1605.06069 PDF:/Users/t/Zotero/storage/GRAMVTBJ/Serban et al. - 2016 - A Hierarchical Latent Variable Encoder-Decoder Mod.pdf:application/pdf;arXiv.org Snapshot:/Users/t/Zotero/storage/E5F8DDQE/1605.html:text/html}
+}
+
+@article{zhao_learning_2017,
+	title = {Learning {Discourse}-level {Diversity} for {Neural} {Dialog} {Models} using {Conditional} {Variational} {Autoencoders}},
+	url = {http://arxiv.org/abs/1703.10960},
+	abstract = {While recent neural encoder-decoder models have shown great promise in modeling open-domain conversations, they often generate dull and generic responses. Unlike past work that has focused on diversifying the output of the decoder at word-level to alleviate this problem, we present a novel framework based on conditional variational autoencoders that captures the discourse-level diversity in the encoder. Our model uses latent variables to learn a distribution over potential conversational intents and generates diverse responses using only greedy decoders. We have further developed a novel variant that is integrated with linguistic prior knowledge for better performance. Finally, the training procedure is improved by introducing a bag-of-word loss. Our proposed models have been validated to generate significantly more diverse responses than baseline approaches and exhibit competence in discourse-level decision-making.},
+	urldate = {2019-01-14},
+	journal = {arXiv:1703.10960 [cs]},
+	author = {Zhao, Tiancheng and Zhao, Ran and Eskenazi, Maxine},
+	month = mar,
+	year = {2017},
+	note = {arXiv: 1703.10960},
+	keywords = {Computer Science - Artificial Intelligence, Computer Science - Computation and Language}
 }
