--- a/Documents/report/main.tex
+++ b/Documents/report/main.tex
@@ -243,7 +243,7 @@ Seq2Seq, introduced by \cite{sutskever_sequence_2014} is a modern interpretation
 
 / something good about seq2seq.
 
-Traditionally, Seq2seq would be the most common method of tackling this particular problem, but it also presents problems that make it suboptimal. Seq2seq models have shown to be effective in reponse generation, but ***, ***, *** suggest that one of the primary causes of the lack of variability of responses could be boiled down to the lack of model variability. (serban et al 2017, zhao et al 2017).
+Traditionally, Seq2seq would be the most common method of tackling this particular problem, but it also presents problems that make it suboptimal. Seq2seq models have shown to be effective in reponse generation, but \cite{serban_hierarchical_2016}; \cite{zhao_learning_2017} suggest that one of the primary causes of the lack of variability of responses could be boiled down to the lack of model variability.
 
 Furthermore, it was discussed by \cite{jiang_why_2018} on the lack of diversity in responses. something something.
 
