--- a/Samples/VAE (Commented Class).ipynb
+++ b/Samples/VAE (Commented Class).ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
