--- a/Samples/VAD.ipynb
+++ b/Samples/VAD.ipynb
@@ -364,10 +364,14 @@
     "          y, \n",
     "          encoder, \n",
     "          decoder, \n",
-    "          backwards, \n",
+    "          backwards,\n",
+    "          inference,\n",
+    "          prior,\n",
     "          encoderOptimiser, \n",
     "          decoderOptimiser, \n",
     "          backwardsOptimiser, \n",
+    "          inferenceOptimiser,\n",
+    "          priorOptimiser,\n",
     "          maxLength = max_length):\n",
     "    \n",
     "    # initialise hidden variables\n",
@@ -378,6 +382,8 @@
     "    encoderOptimiser.zero_grad()\n",
     "    decoderOptimiser.zero_grad()\n",
     "    backwardsOptimiser.zero_grad()\n",
+    "    inferenceOptimiser.zero_grad()\n",
+    "    priorOptimiser.zero_grad()\n",
     "    \n",
     "    inputLength = x.size(0)\n",
     "    targetLength = y.size(0)\n",
@@ -512,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
