--- a/Samples/Autoencoders.ipynb
+++ b/Samples/Autoencoders.ipynb
@@ -576,13 +576,7 @@
       "60000/60000 [==============================] - 1s 22us/step - loss: 0.2834 - val_loss: 0.2832\n",
       "Epoch 76/100\n",
       "60000/60000 [==============================] - 1s 22us/step - loss: 0.2831 - val_loss: 0.2829\n",
-      "Epoch 77/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 77/100\n",
       "60000/60000 [==============================] - 1s 22us/step - loss: 0.2828 - val_loss: 0.2826\n",
       "Epoch 78/100\n",
       "60000/60000 [==============================] - 1s 22us/step - loss: 0.2825 - val_loss: 0.2823\n",
@@ -892,13 +886,7 @@
       "60000/60000 [==============================] - 2s 30us/step - loss: 0.1069 - val_loss: 0.1051\n",
       "Epoch 76/100\n",
       "60000/60000 [==============================] - 2s 30us/step - loss: 0.1066 - val_loss: 0.1065\n",
-      "Epoch 77/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 77/100\n",
       "60000/60000 [==============================] - 2s 31us/step - loss: 0.1064 - val_loss: 0.1054\n",
       "Epoch 78/100\n",
       "60000/60000 [==============================] - 2s 31us/step - loss: 0.1062 - val_loss: 0.1062\n",
@@ -1158,7 +1146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
